frontend/test/should_pass/exectype_AssignMapCreationToVar.grg
using exectype;

rule r
{
	modify  {
		exec(m:map<A,HH> =map<A,HH> && n:map<int,foo> =map<int,foo>);
	}
}