frontend/test/should_fail/exectype_AssignMapAccessToVar.grg
using exectype;

rule r
{
	modify  {
		exec(m:set<A> =set<A> ;> aa:AA=varia && {h=m[aa]}); // must be map type
	}
}